Tue Jan 18 19:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/SHMIOP_Acceptor.cpp:
        * tao/Strategies/SHMIOP_Connector.cpp:
          Replaced ACE casts with their C++ versions

Thu Jan 13 13:50:26 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_array/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_array/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_enum/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_exception/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_exception/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_interface/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_interface/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_sequence/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_sequence/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_structure/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_structure/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_union/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_union/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_union_branch/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/field_cdr_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/marshal_cs.cpp:

          - Replaced calls to an interface's virtual marshal() method
            with calls to TAO::Objref_Traits<>::marshal(), which
            in turn calls the static methjod CORBA::Object::Marshal(),
            which does a check for null reference. Most of these
            replacements had been done some time ago, these were
            evidently overlooked. This fix closes [BUGID:2027].
            Thanks to Jiang Wei <jiangwei_1976@yahoo.com.cn> for
            reporting the marshaling failure of empty object
            references in a sequence.

          - Made generated CORBA::Boolean values more consistent about
            assigning or returniong 'true' or 'false' rather than
            '1' or '0'.

        * tao/Valuetype/AbstractBase.cpp:
